src/objects/DOA_Approver__c.object
<CustomObject>
    <description>Object used to store the DoA Approver Matrix.</description>
    <fields>
        <fullName>Additional_Payment_From__c</fullName>
        <label>Additional Payments From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Payment_To__c</fullName>
        <label>Additional Payments To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Park__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Park</label>
        <referenceTo>Business_Park__c</referenceTo>
        <relationshipLabel>DOA Approver</relationshipLabel>
        <relationshipName>DOA_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Parking</fullName>
                </value>
                <value>
                    <fullName>Business Center - Executive Desk</fullName>
                </value>
                <value>
                    <fullName>Business Center - Executive Office</fullName>
                </value>
                <value>
                    <fullName>Business Center - Hot Desk</fullName>
                </value>
                <value>
                    <fullName>Signage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOA_Discount_Amount_From__c</fullName>
        <label>DOA Discount Amount From</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOA_Discount_Amount_To__c</fullName>
        <label>DOA Discount Amount To</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Percent_From__c</fullName>
        <label>Discount Percent From</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Percent_To__c</fullName>
        <label>Discount Percent To</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Grace_Period_From__c</fullName>
        <label>Grace Period From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grace_Period_To__c</fullName>
        <label>Grace Period To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Type__c</fullName>
        <label>Lease Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renew</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
                <value>
                    <fullName>Modification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level_1_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Level 1 Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DOA_Approver6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level_2_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Level 2 Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DOA_Approver1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level_3_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Level 3 Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DOA_Approver2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <label>Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Premise Lease Opportunity</fullName>
                </value>
                <value>
                    <fullName>Land Lease Opportunity</fullName>
                </value>
                <value>
                    <fullName>Co-Work</fullName>
                    <isActive>false</isActive>
                    <label>Co-Work</label>
                </value>
                <value>
                    <fullName>DED - New Lease - Existing Customer</fullName>
                    <isActive>false</isActive>
                    <label>DED - New Lease - Existing Customer</label>
                </value>
                <value>
                    <fullName>DED - New Lease - New Customer</fullName>
                    <isActive>false</isActive>
                    <label>DED - New Lease - New Customer</label>
                </value>
                <value>
                    <fullName>Downsize - DED</fullName>
                    <isActive>false</isActive>
                    <label>Downsize - DED</label>
                </value>
                <value>
                    <fullName>Expansion - DED</fullName>
                    <isActive>false</isActive>
                    <label>Expansion - DED</label>
                </value>
                <value>
                    <fullName>Lease Downsize</fullName>
                    <isActive>false</isActive>
                    <label>Lease Downsize</label>
                </value>
                <value>
                    <fullName>Lease Expansion</fullName>
                    <isActive>false</isActive>
                    <label>Lease Expansion</label>
                </value>
                <value>
                    <fullName>Lease Modification - Office</fullName>
                    <isActive>false</isActive>
                    <label>Lease Modification - Office</label>
                </value>
                <value>
                    <fullName>Lease Modification - Retail</fullName>
                    <isActive>false</isActive>
                    <label>Lease Modification - Retail</label>
                </value>
                <value>
                    <fullName>Lease Relocation</fullName>
                    <isActive>false</isActive>
                    <label>Lease Relocation</label>
                </value>
                <value>
                    <fullName>Lease Renewal</fullName>
                    <isActive>false</isActive>
                    <label>Lease Renewal</label>
                </value>
                <value>
                    <fullName>New Lease - DED</fullName>
                    <isActive>false</isActive>
                    <label>New Lease - DED</label>
                </value>
                <value>
                    <fullName>New Lease - Retail</fullName>
                    <isActive>false</isActive>
                    <label>New Lease - Retail</label>
                </value>
                <value>
                    <fullName>New Lease - Retail - DED</fullName>
                    <isActive>false</isActive>
                    <label>New Lease - Retail - DED</label>
                </value>
                <value>
                    <fullName>Premise</fullName>
                    <isActive>false</isActive>
                    <label>Premise</label>
                </value>
                <value>
                    <fullName>Renewal - DED</fullName>
                    <isActive>false</isActive>
                    <label>Renewal - DED</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Category</label>
        <referenceTo>Unit_Category__c</referenceTo>
        <relationshipLabel>DOA Approver</relationshipLabel>
        <relationshipName>DOA_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Sub_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Sub-Category</label>
        <referenceTo>Unit_Sub_Category__c</referenceTo>
        <relationshipLabel>DOA Approver</relationshipLabel>
        <relationshipName>DOA_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>DOA Approver</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business_Park__c</columns>
        <columns>Lease_Type__c</columns>
        <columns>Opportunity_Type__c</columns>
        <columns>Unit_Category__c</columns>
        <columns>Unit_Sub_Category__c</columns>
        <columns>Discount_Percent_From__c</columns>
        <columns>Discount_Percent_To__c</columns>
        <columns>DOA_Discount_Amount_From__c</columns>
        <columns>DOA_Discount_Amount_To__c</columns>
        <columns>Grace_Period_From__c</columns>
        <columns>Grace_Period_To__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Park__c</field>
            <operation>equals</operation>
            <value>D3</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>DOA Approv Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DOA Approver</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>